<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Street Cross</string>
    <string name="action_settings">Settings</string>
    <string name="desc"></string>

    <string name="button_play">PLAY</string>
    <string name="button_ranking">RANKING</string>
    <string name="button_instructions">INSTRUCTIONS</string>
    <string name="button_exit">EXIT APP</string>
    
    
    <string name="name">Type your name then press next: </string>
    <string name="stars">Stars</string>
    <string name="y_speed">Your Speed</string>
    <string name="champion">Champion</string>
    <string name="b_speed">Best Speed</string> 
    <string name="button_next">NEXT</string>
    <string name="game_ID">Game number </string>
    <string name="clear_r">Clear Rank</string>
    <string name="go">Go</string>
    <string name="stop">Stop</string>
    <string name="play_again">Play Now</string>
    <string name="inst_text">
   	 Instructions: Your goal is to move in a straigh line, pretending you are crossing a street 
   	 in 6 second as fast as possible, click play an have fun!
    </string> 

</resources>
