<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/LinearLayout1" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <Button android:id="@id/buttonClearRank" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/clear_r" android:layout_weight="1.0" android:onClick="clearPlayers" />
    <Button android:id="@id/buttonPlayAgain" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/play_again" android:layout_weight="1.0" android:onClick="playAgain" />
    <Button android:id="@id/buttonExitApp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/exit" android:layout_weight="1.0" android:onClick="exitApp" />
    <TextView android:textAppearance="?android:textAppearanceLarge" android:id="@id/timestamp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/y_speed" android:layout_weight="1.0" />
    <TextView android:textAppearance="?android:textAppearanceLarge" android:textSize="32.0sp" android:id="@id/currentspeed_db" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1.0" />
    <TextView android:textAppearance="?android:textAppearanceLarge" android:id="@id/textView5" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/b_speed" android:layout_weight="1.0" />
    <TextView android:textAppearance="?android:textAppearanceLarge" android:textSize="22.0sp" android:id="@id/speed_db" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1.0" />
    <TextView android:textAppearance="?android:textAppearanceLarge" android:textStyle="bold" android:gravity="center" android:id="@id/textView1" android:padding="12.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/stars" android:layout_weight="1.0" />
    <RatingBar android:id="@id/ratingBar" android:layout_width="wrap_content" android:layout_height="wrap_content" android:numStars="@integer/Stars" android:layout_weight="1.0" />
</LinearLayout>